<resources>
    <string name="app_name">AndroidStudy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_screen">ScreenActivity</string>

    <string name="show_toast">show toast</string>
    <string name="apply_patch">apply patch</string>
    <string name="download_patch">download tinker patch</string>
    <string name="delete_patch">delete tinker patch</string>
    <string name="title_activity_launch_mode">LaunchModeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="get_base_station">获取基站信息</string>
    <string name="get_wifi_info">获取WiFi信息</string>
    <string name="get_installed_apk">获取所有安装的APP</string>
    <string name="download">下载</string>
    <string name="pause">暂停</string>
</resources>
