<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/applyPatch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/apply_patch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_tools" />

    <Button
        android:id="@+id/downloadPatch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/download_patch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/applyPatch" />

    <Button
        android:id="@+id/deletePatch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_patch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/downloadPatch" />

    <Button
        android:id="@+id/getBaseStation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/get_base_station"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deletePatch" />

    <Button
        android:id="@+id/getWiFi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/get_wifi_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/getBaseStation" />

    <Button
        android:id="@+id/getInstalledApk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/get_installed_apk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/getWiFi" />

    <TextView
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/getInstalledApk" />
</androidx.constraintlayout.widget.ConstraintLayout>